Add include test

--- a/tests/header_filter/foo.yml
+++ b/tests/header_filter/foo.yml
@@ -1,4 +1,22 @@
+declarations:
+- name: A
+  type:
+    kind: array
+    length: 12
+    type:
+      kind: int
+      name: int
+- init: TOTO
+  name: B
+  type:
+    kind: int
+    name: int
 functions:
+- name: bar
+  params: []
+  type:
+    kind: void
+    name: void
 - name: foo
   params:
   - name: a
@@ -8,3 +26,10 @@ functions:
   type:
     kind: void
     name: void
+structs:
+- members:
+  - name: x
+    type:
+      kind: int
+      name: int
+  name: A0
